@@ -3,7 +3,7 @@
 # "./check.sh" without arguments will validate lang and styles files
 # specified here.
 
-langs="ada.lang changelog.lang chdr.lang c.lang cpp.lang csharp.lang
+langs="ada.lang awk.lang changelog.lang chdr.lang c.lang cpp.lang csharp.lang
        css.lang def.lang desktop.lang diff.lang dpatch.lang dtd.lang
        fortran.lang gap.lang gtk-doc.lang gtkrc.lang haskell.lang
        html.lang idl.lang ini.lang java.lang javascript.lang latex.lang
@@ -15,18 +15,18 @@ langs="ada.lang changelog.lang chdr.lang c.lang cpp.lang csharp.lang
 styles="gvim.xml kate.xml testdark.xml"
 
 if [ $1 ]; then
-    langs=$*
-    styles=
+  langs=$*
+  styles=
 fi
 
 for file in $langs; do
-    if ! xmllint --relaxng language2.rng --noout $file ; then
-	exit 1
-    fi
+  if ! xmllint --relaxng language2.rng --noout $file ; then
+    exit 1
+  fi
 done
 
 for file in $styles; do
-    if ! xmllint --relaxng styles.rng --noout $file ; then
-	exit 1
-    fi
+  if ! xmllint --relaxng styles.rng --noout $file ; then
+    exit 1
+  fi
 done
